# perrys-photos

./: .gitignore  README.md  pyproject.toml
perrys_photos/: do.py  lib.py
templates/: base.html.j2  index.html.j2
