[tool.poetry]
name = "perrys_photos"
version = "0.1.0"
description = "Perrys Photos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
doit = "perrys_photos.do:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.0"
pillow = "^10.2.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
